--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row checkboxes">
                 <div class="column ratio">
                     <input type="checkbox" id="ratio" checked>
-                    <label for="ratio">Lock aspects ratio</label>
+                    <label for="ratio">Lock aspect ratio</label>
                 </div>
                 <div class="column quality">
                     <input type="checkbox" id="quality">
